--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -13,9 +13,9 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top" style="height:70px;">
+    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html" style="font-weight:bold;padding-right:30px;">
+            <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
                 F1Tracker
                 <div class="fa fa-flag-checkered"></div>
             </a>
@@ -25,25 +25,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Constructors
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="constructors.html">All Constructors</a></li>
+                    <li class="nav-item"> 
+                        <div class="dropdown">
+                        <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
                             <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
-                        </ul>
+                            </ul>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          More
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="history.html">History </a></li>
-                            <li><a class="dropdown-item" href="rules.html">Rules</a></li>
-                            <li><a class="dropdown-item" href="legends.html">Legends</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <div class="dropdown">
+                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <li><a class="dropdown-item" href='history.html'>History</a></li>
+                                <li><a class="dropdown-item" href="legends.html">Legends</a></li>
+                                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
