--- a/Teste de tretas/teste.html
+++ b/Teste de tretas/teste.html
@@ -15,57 +15,28 @@
 </head>
 
 <body>
-    <div class="container">
-        <header class="lead py-4 text-center">Formula 1 - These Days!</header>
-        <img id="logo" src="https://upload.wikimedia.org/wikipedia/commons/3/33/F1.svg"
-            class="img-thumbnail rounded px-4 py-4"></img>
-        <div class="py-4">
-            <div id="mercedez" class="">
-                <span class="car mercedez py-2">
-                    <i class="material-icons">directions_car</i>
-                    <!-- <img src="https://purepng.com/public/uploads/large/purepng.com-mercedes-benz-car-logologocar-brand-logoscarsmercedes-benz-car-logo-1701527428643swnyk.png" width="50px" height="50px"/> -->
-                </span>
+    <div class = "container">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
-
-            <div id="ferrari" class="">
-                <span class="car ferrari py-2">
-                    <i class="material-icons">directions_car</i>
-                    <!-- <img src="https://purepng.com/public/uploads/large/purepng.com-ferrari-logoferrariferrari-carsferrari-automobilescarssportferrari-logo-17015274809730h2ic.png" width="50px" height="50px"/> -->
-                </span>
-            </div>
-
-            <div id="redbull" class="">
-                <span class="car redbull py-2">
-                    <i class="material-icons">directions_car</i>
-                    <!-- <img src="https://www.pngarts.com/files/1/Red-Bull-PNG-High-Quality-Image.png" width="50px" height="50px"/> -->
-                </span>
-            </div>
+          </div>
         </div>
-        <div id="timeline" class="d-inline">
-            <div class="fp alert alert-primary" id="FP1">Free Practice 1</div>
-            <div class="fp alert alert-primary" id="FP2">Free Practice 2</div>
-            <div class="fp alert alert-primary" id="FP3">Free Practice 3</div>
-            <div class="quali alert alert-danger" id="qualification">Qualification</div>
-            <div class="race alert alert-success" id="race">Race</div>
-            <div class="finish text-center inline-block"><i class="material-icons">golf_course</i></div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
-        <div id="legends" class="text-center my-2">
-            <div id="mercedez"><i class="material-icons">directions_car</i>
-                <p class="d-inline legend-align">Mercedez</p>
-            </div>
-            <div id="ferrari"><i class="material-icons">directions_car</i>
-                <p class="d-inline legend-align">Ferrari</p>
-            </div>
-            <div id="redbull"><i class="material-icons">directions_car</i>
-                <p class="d-inline legend-align">Red Bull</p>
-            </div>
-        </div>
+        
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-
-    <script src="index.js"></script>
 </body>
 
 </html>
