--- a/Projeto/raceDetails.html
+++ b/Projeto/raceDetails.html
@@ -90,27 +90,25 @@
         <div style="width: 50%; float: left;">
             <h1>Results</h1>
         </div>
-        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 80%;float: left;">
+        <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; float: left;">
             <thead class="bg-success text-light">
                 <tr>
                     <th scope="col">DriverId</th>
-                    <th scope="col">DriverName</th>
-                    <th scope="col">ConstrucotrName</th>
+                    <th scope="col">Driver</th>
+                    <th scope="col">Constructor</th>
                     <th scope="col">Grid</th>
                     <th scope="col">Position</th>
-                    <th scope="col">Rank</th>
                     <th scope="col">Status</th>
                     <th scope="col" class="text-right"></th>
                 </tr>
             </thead>
-            <tbody data-bind="foreach: Drivers">
+            <tbody data-bind="foreach: Results">
                 <tr>
                     <td class="align-middle" data-bind="text:DriverId"></td>
                     <td class="align-middle" data-bind="text:DriverName"></td>
                     <td class="align-middle" data-bind="text:ConstructorName"></td>
                     <td class="align-middle" data-bind="text:Grid"></td>
                     <td class="align-middle" data-bind="text:Position"></td>
-                    <td class="align-middle" data-bind="text:Rank"></td>
                     <td class="align-middle" data-bind="text:Status"></td>
 
                     <td class="text-end">
