--- a/Projeto/constructorDetails.html
+++ b/Projeto/constructorDetails.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="myCSS.css" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
                 F1Tracker
@@ -57,7 +57,7 @@
             <h2 data-bind="text:Name() +' ['+ConstructorId()+']'"></h2>
         </div>
         <!--ko if: Name().length > 0 -->
-        <table class="table table-sm small">
+        <table class="table bg-darktable-sm small">
             <tr class="row">
                 <th class="col-md-2">Constructor Id</th>
                 <td class="col-md-10" data-bind="text: ConstructorId"></td>
@@ -91,7 +91,7 @@
             <h1>Races <i class="fa fa-flag-checkered"></i> </h1>
         </div>        
         <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 30%; float: left;">
-            <thead class="bg-success text-light">
+            <thead class="bg-dark text-light">
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
@@ -112,7 +112,7 @@
             </tbody>
         </table>
         <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 50%; float: right;">
-            <thead class="bg-success text-light">
+            <thead class="bg-dark text-light">
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">CircuitName</th>
