--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
                 F1Tracker
@@ -85,7 +85,7 @@
 
         <!-- /ko -->
         <table class="table table-striped table-sm small">
-            <thead class="bg-success text-light">
+            <thead class="bg-dark text-light">
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
