--- a/Projeto/driverdetailsv2.html
+++ b/Projeto/driverdetailsv2.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="myCSS.css" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
                 F1Tracker
@@ -162,7 +162,7 @@
             <h1>Races <i class="fa fa-flag-checkered"></i> </h1>
         </div>
         <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; width: 50%; float: left;">
-            <thead class="bg-danger text-light">
+            <thead class="bg-dark text-light">
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">CircuitName</th>
