--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
                 F1Tracker
@@ -89,7 +89,7 @@
         </div>
         <!-- /ko -->
         <table class="table table-striped table-sm small" id="myTable">
-            <thead class="bg-danger text-light">
+            <thead class="bg-dark text-light">
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
