--- a/Projeto/rules.html
+++ b/Projeto/rules.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="padding-right:30px;font-weight:bold">
                 F1Tracker
