--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -15,7 +15,7 @@
     <title></title>
 </head>
 <body style="background-image: url(https://w0.peakpx.com/wallpaper/737/716/HD-wallpaper-legends-ayrton-senna-f1-fia-formula-1-formula1-michael-schumacher-niki-lauda-schumacher-senna.jpg);  background-repeat: no-repeat; background-size: cover; background-position: center">
-    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top" style="height:70px;">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg fixed-top" style="height:70px;">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="font-weight:bold;padding-right:30px;">
                 F1Tracker
