--- a/Projeto/raceDetails.html
+++ b/Projeto/raceDetails.html
@@ -93,7 +93,7 @@
             <h1>Results</h1>
         </div>
         <table class="table table-striped table-sm small " style="overflow-y: scroll;height: 500px; display: block; float: left;">
-            <thead class="bg-success text-light">
+            <thead class="bg-dark text-light">
                 <tr>
                     <th scope="col">DriverId</th>
                     <th scope="col">Driver</th>
